--- a/backend/vera-backend/.gitignore
+++ b/backend/vera-backend/.gitignore
@@ -54,3 +54,8 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+/generated/prisma
+dist/
+.env.production
+prisma/migrations/*.sql
