--- a/frontend/vera_frontend/angular.json
+++ b/frontend/vera_frontend/angular.json
@@ -7,7 +7,7 @@
   },
   "newProjectRoot": "projects",
   "projects": {
-    "vera_project": {
+    "test-projet2": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -62,10 +62,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "vera_project:build:production"
+              "buildTarget": "test-projet2:build:production"
             },
             "development": {
-              "buildTarget": "vera_project:build:development"
+              "buildTarget": "test-projet2:build:development"
             }
           },
           "defaultConfiguration": "development"
