--- a/frontend/vera_frontend/angular.json
+++ b/frontend/vera_frontend/angular.json
@@ -20,10 +20,12 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+                  {
+                      "glob": "**/*",
+                      "input": "public"
+                },
+                    "src/favicon.ico",
+                    "src/assets"
             ],
             "styles": ["src/styles.css"],
             "server": "src/main.server.ts",
